# rslogcat

./: .gitignore  Cargo.toml
rslogcat/: Cargo.toml
rslogcat/src/: cli.rs  main.rs
