[package]
name = "rslogcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.0"
itertools = "0.10.5"
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
rayon = "1.5.3"
regex = "1.7.0"
thiserror = "1.0.37"
